@@ -1,6 +1,7 @@
 * release 0.2.9c
 	- added original sound limiter (16 channels)
 	- fixed some bounding box checks
+	- fixed sound gliches when resuming the game after a cutscene
 
 * release 0.2.9b
 	- added PSX hint screens
